--- a/package.json
+++ b/package.json
@@ -101,7 +101,9 @@
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-resizable-panels": "^2.0.19",
+    "react-router-dom": "^6.16.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
