--- a/package.json
+++ b/package.json
@@ -101,10 +101,14 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
+    "graphology": "^0.25.4",
+    "graphology-layout-force": "^0.2.4",
+    "graphology-layout-forceatlas2": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.16.0",
+    "sigma": "^3.0.0-beta.18",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
@@ -115,6 +119,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/d3": "^7.4.3",
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.2",
     "@types/react": "^18.2.21",
