--- a/package.json
+++ b/package.json
@@ -108,8 +108,7 @@
     "react-dom": "^18.2.0",
     "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.16.0",
-    "sigma": "^3.0.0-beta.18",
-    "sqlite3": "^5.1.7"
+    "sigma": "^3.0.0-beta.18"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
